infrastructure/kong/contentvideo-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contentvideo-service-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api/content
        pathType: Prefix
        backend:
          service:
            name: contentvideo-service
            port:
              number: 8003
      - path: /api/content/upload
        pathType: Prefix
        backend:
          service:
            name: contentvideo-service
            port:
              number: 8003
